# Newscapper-CrewAI

newscapper_ai/: README.md  pyproject.toml
newscapper_ai/news/: 2025-06-24_22-52-05_news_article.md  2025-06-24_news_article.md
newscapper_ai/src/newscapper_ai/: crew.py  main.py
newscapper_ai/src/newscapper_ai/config/: agents.yaml  tasks.yaml
