[project]
name = "newscapper_ai"
version = "0.1.0"
description = "newscapper-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
newscapper_ai = "newscapper_ai.main:run"
run_crew = "newscapper_ai.main:run"
train = "newscapper_ai.main:train"
replay = "newscapper_ai.main:replay"
test = "newscapper_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
